--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,14 @@ ul {
     margin: 0;
 }
 
+input[type=text], input[type=email], input[type=number], textarea {
+    width: 100%;
+    padding: 7px 10px;
+    border: none;
+    border-radius: 5px;
+    margin: 10px 0px 20px;
+}
+
 .header {
     position: relative;
     background-color: #252d35;
@@ -160,6 +168,59 @@ ul {
     color: #2c50ee;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.feedback-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+    min-height: 500px;
+}
+
+.feedback-form {
+    flex: 1;
+}
+
+.feedback-form form {
+    color: #f0f0f0;
+    margin-left: 63px;
+    margin-right: 48px;
+}
+
+.feedback-form form label {
+    margin: 20px 0px;
+    font-size: 1.3em;
+}
+
+.btn-submit {
+    width: 100%;
+    padding: 7px 10px;
+    border: none;
+    border-radius: 5px;
+    margin: 10px 0px 20px;
+    background-color: #2c50ee;
+    color: #ffffff;
+    font-size: 1.4em;
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: all .3s ease-in-out;
+}
+
+.btn-submit:hover {
+    background-color: #ffffff;
+    color: #2c50ee;
+}
+
+.getintouch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    background-color: #2c50ee;
+    color: #ffffff;
+    flex: 1;
+    height: 300px;
 }
 
 .slide-fade-enter-active,
